--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -20,78 +20,11 @@ config SUSPEND_FREEZER
 
 config HAS_WAKELOCK
 	bool
-
-config HAS_EARLYSUSPEND
-	bool
+	default y
 
 config WAKELOCK
-	bool "Wake lock"
-	depends on PM && RTC_CLASS
-	default n
-	select HAS_WAKELOCK
-	---help---
-	  Enable wakelocks. When user space request a sleep state the
-	  sleep request will be delayed until no wake locks are held.
-
-config WAKELOCK_STAT
-	bool "Wake lock stats"
-	depends on WAKELOCK
+	bool
 	default y
-	---help---
-	  Report wake lock stats in /proc/wakelocks
-
-config USER_WAKELOCK
-	bool "Userspace wake locks"
-	depends on WAKELOCK
-	default y
-	---help---
-	  User-space wake lock api. Write "lockname" or "lockname timeout"
-	  to /sys/power/wake_lock lock and if needed create a wake lock.
-	  Write "lockname" to /sys/power/wake_unlock to unlock a user wake
-	  lock.
-
-config USER_WAKELOCK_DONT_LOCK
-	bool "Userspace wakelocks white- and blacklists"
-	depends on WAKELOCK
-	default y
-	---help---
-	  This feature allows to define wakelocks white- and blacklists to be 
-	  preserved from keeping the system awake.
-
-config EARLYSUSPEND
-	bool "Early suspend"
-	depends on WAKELOCK
-	default y
-	select HAS_EARLYSUSPEND
-	---help---
-	  Call early suspend handlers when the user requested sleep state
-	  changes.
-
-choice
-	prompt "User-space screen access"
-	default FB_EARLYSUSPEND if !FRAMEBUFFER_CONSOLE
-	default CONSOLE_EARLYSUSPEND
-	depends on HAS_EARLYSUSPEND
-
-	config NO_USER_SPACE_SCREEN_ACCESS_CONTROL
-		bool "None"
-
-	config CONSOLE_EARLYSUSPEND
-		bool "Console switch on early-suspend"
-		depends on HAS_EARLYSUSPEND && VT
-		---help---
-		  Register early suspend handler to perform a console switch to
-		  when user-space should stop drawing to the screen and a switch
-		  back when it should resume.
-
-	config FB_EARLYSUSPEND
-		bool "Sysfs interface"
-		depends on HAS_EARLYSUSPEND
-		---help---
-		  Register early suspend handler that notifies and waits for
-		  user-space through sysfs when user-space should stop drawing
-		  to the screen and notifies user-space when it should resume.
-endchoice
 
 config HIBERNATE_CALLBACKS
 	bool
@@ -179,12 +112,31 @@ config PM_SLEEP_SMP
 	select HOTPLUG_CPU
 
 config PM_AUTOSLEEP
-       bool "Opportunistic sleep"
-       depends on PM_SLEEP
-       default n
-       ---help---
-       Allow the kernel to trigger a system transition into a global sleep
-       state automatically whenever there are no active wakeup sources.
+	bool "Opportunistic sleep"
+	depends on PM_SLEEP
+	default n
+	---help---
+	Allow the kernel to trigger a system transition into a global sleep
+	state automatically whenever there are no active wakeup sources.
+
+config PM_WAKELOCKS
+	bool "User space wakeup sources interface"
+	depends on PM_SLEEP
+	default n
+	---help---
+	Allow user space to create, activate and deactivate wakeup source
+	objects with the help of a sysfs-based interface.
+
+config PM_WAKELOCKS_LIMIT
+	int "Maximum number of user space wakeup sources (0 = no limit)"
+	range 0 100000
+	default 100
+	depends on PM_WAKELOCKS
+
+config PM_WAKELOCKS_GC
+	bool "Garbage collector for user space wakeup sources"
+	depends on PM_WAKELOCKS
+	default y
 
 config PM_RUNTIME
 	bool "Run-time PM core functionality"
@@ -315,58 +267,9 @@ config PM_CLK
 	def_bool y
 	depends on PM && HAVE_CLK
 
-config SUSPEND_TIME
-	bool "Log time spent in suspend"
-	---help---
-	  Prints the time spent in suspend in the kernel log, and
-	  keeps statistics on the time spent in suspend in
-	  /sys/kernel/debug/suspend_time
-
-config DVFS_LIMIT
-	bool "DVFS frequency limitation feature"
-	
-config PM_SYNC_CTRL
-	bool "file systems sync on suspend control"
-	depends on PM
-	default n
-	help
-	   An experimental control of filesystems sync on suspend
-
-config SPEEDUP_KEYRESUME
-	bool "Speed up late resume"
-	depends on SUSPEND
-	default y
-	---help---
-	  Speed up system resume
-
-config CPU_PM
-       bool "CPU PM"
-       default y
-       depends on SUSPEND || CPU_IDLE
-
 config PM_GENERIC_DOMAINS
 	bool
 	depends on PM
-
-config WQ_POWER_EFFICIENT_DEFAULT
-	bool "Enable workqueue power-efficient mode by default"
-	depends on PM
-	default n
-	help
-	  Per-cpu workqueues are generally preferred because they show
-	  better performance thanks to cache locality; unfortunately,
-	  per-cpu workqueues tend to be more power hungry than unbound
-	  workqueues.
-
-	  Enabling workqueue.power_efficient kernel parameter makes the
-	  per-cpu workqueues which were observed to contribute
-	  significantly to power consumption unbound, leading to measurably
-	  lower power usage at the cost of small performance overhead.
-
-	  This config option determines whether workqueue.power_efficient
-	  is enabled by default.
-
-	  If in doubt, say N.
 
 config PM_GENERIC_DOMAINS_RUNTIME
 	def_bool y
@@ -375,3 +278,10 @@ config PM_GENERIC_DOMAINS_RUNTIME
 config CPU_PM
 	bool
 	depends on SUSPEND || CPU_IDLE
+
+config SUSPEND_TIME
+	bool "Log time spent in suspend"
+	---help---
+	  Prints the time spent in suspend in the kernel log, and
+	  keeps statistics on the time spent in suspend in
+	  /sys/kernel/debug/suspend_time
