--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -51,6 +51,14 @@ config USER_WAKELOCK
 	  Write "lockname" to /sys/power/wake_unlock to unlock a user wake
 	  lock.
 
+config USER_WAKELOCK_DONT_LOCK
+	bool "Userspace wakelocks white- and blacklists"
+	depends on WAKELOCK
+	default y
+	---help---
+	  This feature allows to define wakelocks white- and blacklists to be 
+	  preserved from keeping the system awake.
+
 config EARLYSUSPEND
 	bool "Early suspend"
 	depends on WAKELOCK
@@ -59,6 +67,32 @@ config EARLYSUSPEND
 	---help---
 	  Call early suspend handlers when the user requested sleep state
 	  changes.
+
+choice
+	prompt "User-space screen access"
+	default FB_EARLYSUSPEND if !FRAMEBUFFER_CONSOLE
+	default CONSOLE_EARLYSUSPEND
+	depends on HAS_EARLYSUSPEND
+
+	config NO_USER_SPACE_SCREEN_ACCESS_CONTROL
+		bool "None"
+
+	config CONSOLE_EARLYSUSPEND
+		bool "Console switch on early-suspend"
+		depends on HAS_EARLYSUSPEND && VT
+		---help---
+		  Register early suspend handler to perform a console switch to
+		  when user-space should stop drawing to the screen and a switch
+		  back when it should resume.
+
+	config FB_EARLYSUSPEND
+		bool "Sysfs interface"
+		depends on HAS_EARLYSUSPEND
+		---help---
+		  Register early suspend handler that notifies and waits for
+		  user-space through sysfs when user-space should stop drawing
+		  to the screen and notifies user-space when it should resume.
+endchoice
 
 config HIBERNATE_CALLBACKS
 	bool
