--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -392,3 +392,9 @@ choice
 		  to the screen and notifies user-space when it should resume.
 endchoice
 
+config PM_SYNC_CTRL
+	bool "file systems sync on suspend control"
+	depends on PM
+	default n
+	help
+	   An experimental control of filesystems sync on suspend
