--- a/arch/arm/configs/codina_defconfig
+++ b/arch/arm/configs/codina_defconfig
@@ -113,7 +113,6 @@ CONFIG_INITRAMFS_ROOT_GID=0
 # CONFIG_RD_LZ4 is not set
 CONFIG_INITRAMFS_COMPRESSION_NONE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
-# CONFIG_LTO_MENU is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=5
@@ -1778,6 +1777,7 @@ CONFIG_FB_SYS_FOPS=y
 # Frame buffer hardware drivers
 #
 CONFIG_MCDE=y
+CONFIG_MCDE_LCDCLK_MANAGEMENT=y
 CONFIG_FB_MCDE=y
 # CONFIG_FB_MCDE_DEBUG is not set
 # CONFIG_MCDE_FB_AVOID_REALLOC is not set
@@ -2430,7 +2430,6 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_JFS_FS is not set
 # CONFIG_XFS_FS is not set
 # CONFIG_GFS2_FS is not set
-# CONFIG_OCFS2_FS is not set
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
 CONFIG_F2FS_FS=m
@@ -2499,6 +2498,8 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
 CONFIG_SDCARD_FS=m
+CONFIG_SDCARD_FS_CI_SEARCH=m
+# CONFIG_SDCARD_FS_XATTR is not set
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
@@ -2564,7 +2565,6 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_KOI8_R is not set
 # CONFIG_NLS_KOI8_U is not set
 CONFIG_NLS_UTF8=y
-# CONFIG_DLM is not set
 CONFIG_DYNAMIC_FSYNC=y
 CONFIG_ASYNC_FSYNC=y
 
@@ -2825,3 +2825,4 @@ CONFIG_CPU_RMAP=y
 CONFIG_NLATTR=y
 CONFIG_AVERAGE=y
 CONFIG_GOD_MODE=y
+CONFIG_SENSORS=y
